Small refactorings (smaller secondary chat resize handle, persist config toggles)